--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     margin-inline: auto;
     border-radius: 20px;
     overflow: hidden;
-    
+    cursor: pointer;
 }
 .row{  
     display: flex;
